add demo and lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,11 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "ngx-metadate-representation": [
+        "./dist/ngx-metadate-representation"
+      ]
+    },
     "skipLibCheck": true,
     "isolatedModules": true,
     "esModuleInterop": true,
